--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ text-align: center;
 
 }
 table{
-    border: 2px solid;
+    border: 2px solid ;
     border-style: solid;
     align-items: center;
 }
@@ -56,9 +56,35 @@ td{
 
 body{
     background-color: #6f6f6f;
+
+
 }
-.connected {
-border: 0px solid #dddddd;
-text-align: center;
-padding: 20px;
+p, h3, h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.fotogalerie{
+  
+display: flex;
+margin-left: 30%;
+}
+.fotka img{
+width: 200px;
+height: auto;
+
+}
+.fotka{
+    border: 2px solid black;
+    margin-left: 20px;
+    width: 200px;
+    height: auto;
+}
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: -10px;
+    padding: 40px;
+
 }
